--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,10 +1,9 @@
 @tailwind base;
-
-@plugin "tailwindcss-animate";
+@import 'tw-animate-css';
 @tailwind components;
 @tailwind utilities;
 @import 'tailwindcss';
-@import "tw-animate-css";
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 :root {
